# video-retrieval-cvpr

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
configs/build_pairs/: openvid_dev.yaml  openvid_prod.yaml
configs/encode/openvid/: openvid_dev.yaml  openvid_prod.yaml
configs/encoder/: flan_dev.yaml  flan_prod.yaml  vjepa_dev.yaml  vjepa_prod.yaml
configs/encoder/flan/: flan_test_dev.yaml  flan_test_prod.yaml  flan_train_dev.yaml  flan_train_prod.yaml  flan_val_dev.yaml  flan_val_prod.yaml
configs/encoder/vjepa/: vjepa_test_dev.yaml  vjepa_test_prod.yaml  vjepa_train_dev.yaml  vjepa_train_prod.yaml  vjepa_val_dev.yaml  vjepa_val_prod.yaml
configs/fusion/: cross_attention_dev.yaml
configs/generate_edits/: openvid_dev.yaml  openvid_prod.yaml
configs/train/: cross_attention_dev.yaml  cross_attention_prod.yaml
covr/data/: collate.py  dataset.py  val-set_with-targets.json
covr/evaluation/: metrics.py
covr/models/: cross_attention.py  flan_t5_encoder.py  vjepa.py
covr/utils/: gdrive.py
notebooks/: data_exploration.ipynb  output_exploration.ipynb
scripts/: build_pairs.py  download_covr_videos.py  download_dataset.py  download_openvid.py  encode_gallery.py  encode_openvid.py  encode_queries.py  generate_edits.py  train_cross_attention.py
